tests/compile_fail/headers_on_enum.stderr
error: Headers can only be derived for structs
 --> tests/compile_fail/headers_on_enum.rs:6:6
  |
6 | enum InvalidHeadersEnum {
  |      ^^^^^^^^^^^^^^^^^^
